# globule-patch

mod-globule-1.3.2/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  configure  configure.in  globule.sln
mod-globule-1.3.2/apache/: udp-requests-httpd-2.0.50.patch
mod-globule-1.3.2/apache/GlobuleMonitor/: ApacheMonitor.c  ApacheMonitor.h  GlobuleMonitor.c  GlobuleMonitor.h  README.txt
mod-globule-1.3.2/doc/: .distributing.tex.swp  Globule.css  Makefile  Makefile.in  distributing.tex  doc.bib  doc.html  doc.tex  doc001.html  doc002.html  doc003.html  doc004.html  doc005.html  doc006.html  doc007.html  doc008.html  doc009.html  doc010.html  doc011.html  globule-tulip.xcf  globule-tulips.xcf  globule.xcf  index.html  issues.tex  model.fig.bak  monitorhosts.txt  programmers.tex  soberish.sty  tips-tricks2.tex.bak  xyz-ab-v0.fig
mod-globule-1.3.2/globule/: Constants.hpp  FilterConfiguration.cpp  FilterConfiguration.hpp  Makefile.am  Makefile.in  Storage.cpp  Storage.hpp  config.h.in  configuration.hpp  documents.cpp  documents.hpp  exceptions.cpp  filemonitor.cpp  filemonitor.hpp  globuledebug.cpp  globuleprobe.cpp  globuleutil.cpp  heartbeat.cpp  heartbeat.hpp  locking.cpp  locking.hpp  mod_globule.cpp  monitoring.cpp  monitoring.h  myapr_rmm.c  myapr_rmm.h  psodium.h  resources.cpp  resources.hpp  utilities.cpp  utilities.h
mod-globule-1.3.2/globule/adapt/: Makefile.am  Makefile.in  globules.cfornax  globules.cpp  mapping.cpp  mapping.h  reportreader.cpp  reportreader.h  tracegen.cpp  traceplay.cpp
mod-globule-1.3.2/globule/alloc/: Allocator.cpp  Allocator.hpp
mod-globule-1.3.2/globule/event/: EventMgr.cpp  EventMgr.hpp  EvictionEvent.hpp  FileMonitorEvent.hpp  GlobuleEvent.cpp  GlobuleEvent.hpp  HeartBeatEvent.hpp  HttpLogEvent.hpp  HttpMetaEvent.hpp  HttpReqEvent.hpp  LoadEvent.hpp  PostRequestEvent.hpp  RedirectEvent.cpp  RedirectEvent.hpp  RegisterEvent.cpp  RegisterEvent.hpp  ReportEvent.cpp  ReportEvent.hpp  SwitchEvent.hpp
mod-globule-1.3.2/globule/netw/: HttpRequest.cpp  HttpRequest.hpp  Url.cpp  Url.hpp
mod-globule-1.3.2/globule/policy/: AlexPolicy.cpp  AlexPolicy.hpp  GlobeCBPolicy.cpp  GlobeCBPolicy.hpp  InvalidatePolicy.cpp  InvalidatePolicy.hpp  MirrorNoConsPolicy.cpp  MirrorNoConsPolicy.hpp  PureProxyPolicy.cpp  PureProxyPolicy.hpp  ReplPolicy.cpp  ReplPolicy.hpp  SpecialPolicy.cpp  SpecialPolicy.hpp  TtlPolicy.cpp  TtlPolicy.hpp
mod-globule-1.3.2/globule/redirect/: dns_comm.cpp  dns_comm.h  dns_config.h  dns_policy.cpp  dns_policy.hpp  dns_policy_as.cpp  dns_policy_as.hpp  dns_policy_balanced.cpp  dns_policy_balanced.hpp  dns_policy_rr.cpp  dns_policy_rr.hpp  dns_policy_wrand.cpp  dns_policy_wrand.hpp  dns_policy_wrr.cpp  dns_policy_wrr.hpp  dns_protocol.cpp  dns_protocol.h  mod_netairt.cpp  mod_netairt.h
mod-globule-1.3.2/globule/resource/: BaseHandler.cpp  BaseHandler.hpp  BrokeredHandler.cpp  BrokeredHandler.hpp  ConfigHandler.cpp  ConfigHandler.hpp  DatabaseHandler.cpp  DatabaseHandler.hpp  Handler.cpp  Handler.hpp  ImportHandler.cpp  ImportHandler.hpp  KeeperHandler.cpp  KeeperHandler.hpp  NameBindingHandler.cpp  NameBindingHandler.hpp  OriginHandler.cpp  OriginHandler.hpp  Peer.cpp  Peer.hpp  ProxyHandler.cpp  ProxyHandler.hpp  RedirectorHandler.cpp  RedirectorHandler.hpp  SourceHandler.cpp  SourceHandler.hpp
mod-globule-1.3.2/mod_globule/: mod_globule.vcproj
mod-globule-1.3.2/monitor/: Makefile.am  Makefile.in  config.h.in  monitorhost.c  monitorhost.h  monitorhostutil.c
mod-globule-1.3.2/psodium/: Makefile  Makefile.am  Makefile.in  auditorctl  auditorctl.in  config.h  config.h.in  mod_psodium.h  utilities.cpp
mod-globule-1.3.2/psodium/auditord/: AprOpenFileVector.hpp  AuditorMain.cpp  AuditorMain.hpp  AuditorThread.cpp  OnDiskHashTable.hpp  ap_fake.c
mod-globule-1.3.2/psodium/module/: MasterRequestHandling.cpp  PsodiumConfig.cpp  mod_psodium.c  output_filter.c  pso_error.c  temp_storage.c
mod-globule-1.3.2/psodium/utillib/: AprError.cpp  AprError.hpp  AprSemaphore.hpp  BadSlavesUtil.cpp  BadSlavesVector.hpp  Debug.cpp  DigestsUtil.cpp  IPAddrPortVector.hpp  LyingClientsUtil.cpp  LyingClientsVector.hpp  Pledge.hpp  PledgeUtil.cpp  ResponseInfo.hpp  Slave2DigestsMap.hpp  SlaveDatabase.hpp  SlaveDatabaseUtil.cpp  SlaveRecord.hpp  Time2DigestsMap.hpp  Versions.hpp  util.c
mod-globule-1.3.2/sample/: Makefile.am  Makefile.in  httpd.conf  javascript-example.html  webalizer.conf
mod-globule-1.3.2/sample/errordocument/: HTTP_BAD_GATEWAY.shtml  HTTP_BAD_REQUEST.shtml  HTTP_FORBIDDEN.shtml  HTTP_GONE.shtml  HTTP_INTERNAL_SERVER_ERROR.shtml  HTTP_LENGTH_REQUIRED.shtml  HTTP_METHOD_NOT_ALLOWED.shtml  HTTP_NOT_ACCEPTABLE.shtml  HTTP_NOT_FOUND.shtml  HTTP_NOT_IMPLEMENTED.shtml  HTTP_PRECONDITION_FAILED.shtml  HTTP_REQUEST_ENTITY_TOO_LARGE.shtml  HTTP_REQUEST_TIME_OUT.shtml  HTTP_REQUEST_URI_TOO_LARGE.shtml  HTTP_SERVICE_UNAVAILABLE.shtml  HTTP_UNAUTHORIZED.shtml  HTTP_UNSUPPORTED_MEDIA_TYPE.shtml  HTTP_VARIANT_ALSO_VARIES.shtml  bottom.shtml  top.shtml
mod-globule-1.3.2/sample/globuleadm/: Globule.css  adnonsense.xcf  auto.php  chart-map.php  chart.php  checkup.php  database.php  diagnostics.html  diagnostics.php  filtering.php  general.cgi  general.html  general.php  getinfo.php  globule.cgi  globule.php  index.cgi  index.html  index.php  namebinding.php  peers.php  resources.php  section-report.php  section.cgi  section.php  sections.cgi  sections.php  statistics.php
mod-globule-1.3.2/sample/html/: globule-adsense.html  index.html
mod-globule-1.3.2/tests/: Makefile  Makefile.in  README  floodA-fileset.txt  shared.mk
mod-globule-1.3.2/tests/GlobuleTest/: Functions.pm
mod-globule-1.3.2/testsuite/: 2backupstest-masterbackup.pl  2backupstest-rest.pl  Makefile  README  TestFunc.pm  backuptest-masteronly.pl  backuptest-rest.pl  backuptest.pl  floodtest.pl  floodtest.pl.bak  httpd.template  indexupdtest.pl  redirectortest.pl  roottest.pl  runtests.sh  simpleroot.pl  small.pl  test.pl  uritests.pl  vhost.pl
mod-globule-1.3.2/tools/: globulectl  globulectl.in  installer.sh  mkinstaller.sh
(+247 files in other folders)
