AC_INIT(README)
AC_CANONICAL_SYSTEM
AC_CONFIG_HEADERS(config.h)
AC_PREFIX_DEFAULT(/dev/null)

AC_PROG_CC
AC_PROG_CXX

if test x$CXX = xg++ ; then
  AC_MSG_CHECKING([for g++ compiler version])
  CXX_VERSION=`$CXX --version 2>&1 | sed -e 's/^[[^0-9]]*\([[0-9]][[0-9]]*\.[[0-9]][[0-9\.]]*\).*$/\1/p' -e 'd'`
  case $CXX_VERSION in
  1.*|2.*)
    AC_MSG_RESULT([$CXX_VERSION])
    AC_MSG_ERROR([*** using a too old g++ version - please upgrade to g++-3 ***])
    ;;
  *)
    AC_MSG_RESULT([$CXX_VERSION ok])
    ;;
  esac
fi

AC_MSG_CHECKING(for OpenSSL)
if test "$with_openssl" != "no" ; then
  if test "$with_openssl" == "yes" -o -z "$with_openssl" ; then
    AC_SUBST(OPENSSLDIR,/usr)
  else
    AC_SUBST(OPENSSLDIR,$with_openssl)
  fi
  if test -e $OPENSSLDIR/include/openssl/ssl.h; then
    AC_MSG_RESULT($OPENSSLDIR)
    CFLAGS="$CFLAGS -I$OPENSSLDIR/include"
    CPPFLAGS="$CPPFLAGS -I$OPENSSLDIR/include"
    LDFLAGS="$LDFLAGS -L$OPENSSLDIR -R$OPENSSLDIR -lcrypto"
  else
    AC_MSG_ERROR( $OPENSSLDIR/include/openssl/ssl.h not found. OpenSSL is a required package. Use/check the --with-openssl parameter)
  fi
else
  if test "$psodium" = true ; then
    AC_MSG_ERROR([ not found! *** OpenSSL is a required package for pSodium  ***])
  else
    AC_MSG_RESULT([skipped])
  fi
fi

AC_LANG_CPLUSPLUS
